# FTorch-benchmarks

./: .gitignore  CMakeLists.txt  README-CSD3.md  README.md  benchmarker.f90  benchmarker_cgdrag_forpy.f90  benchmarker_cgdrag_torch.f90  benchmarker_forpy.f90  benchmarker_large_stride_forpy.f90  benchmarker_large_stride_torch.f90  benchmarker_resnet_forpy.f90  benchmarker_resnet_torch.f90  benchmarker_torch.f90  benchmarker_utils.f90  benchmarker_utils_mod.f90  cg_drag_forpy.f90  cg_drag_torch.f90  lat.txt  precision_mod.f90  run_benchmarks.sh  run_benchmarks_gpu.sh
benchmark_cgdrag/: benchmarker_cgdrag_forpy.f90  benchmarker_cgdrag_torch.f90  benchmarker_cgdrag_torch_implicit.f90
benchmark_large_stride/: benchmarker_large_stride_forpy.f90  benchmarker_large_stride_torch.f90
benchmark_mima/: benchmarker_forpy.f90  benchmarker_torch.f90  cg_drag_forpy_mod.f90  cg_drag_torch_mod.f90
benchmark_resnet/: benchmarker_resnet_forpy.f90  benchmarker_resnet_torch.f90
cgdrag_model/: README.md  arch_davenet.py  psfc.txt  pt2ts.py  run_emulator_davenet.py  run_emulator_davenet_orig.py  saved_cgdrag_model_cpu.pt  saved_cgdrag_model_gpu.pt  test_coupling.py
large_stride_model/: README.md  arch_stride.py  compare_nets.py  pt2ts.py  run_emulator_stride.py  saved_large_stride_model_gpu.pt  test_coupling.py
pytorch/: arch_davenet_orig.py  pt2ts.py  run_emulator_davenet.py  saved_cgdrag_model_gpu.pth
resnet_model/: README.md  pt2ts.py  resnet18.py  resnet_infer_python.py
resnetmodel/: pt2ts.py  resnet18.py  resnet_infer_python.py
stridemodel/: arch_stride.py  pt2ts.py  run_emulator_stride.py  saved_large_stride_model_gpu.pth  saved_model.pth  test_coupling.py
utils/: benchmarker_utils.f90  benchmarker_utils_mod.f90  read_benchmarks.py  visualise.ipynb
